--- a/style/style.css
+++ b/style/style.css
@@ -1,50 +1,467 @@
 :root {
-    --negro: rgb(22, 22, 22);
-    --blanco: rgb(247, 247, 247);
-    --naranja: rgb(255, 92, 51);
+  --negro: rgb(22, 22, 22);
+  --blanco: rgb(247, 247, 247);
+  --naranja: rgb(255, 92, 51);
+  --gris: #808080;
+  --fondo: #f2f2f2;
 }
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.nav-completo{
-    background-color: var(--negro);
-    display: flex;
-    justify-content: space-between;
-    padding: 0px 20px;
+.nav-completo {
+  background-color: var(--negro);
+  display: flex;
+  justify-content: space-between;
+  padding: 0px 25px;
 }
 
-.logo{
-    display: flex;
-    align-items: center;
+.logo {
+  display: flex;
+  align-items: center;
 }
 
-.navbar{
-    margin: 40px;
+.navbar {
+  margin: 40px;
 }
 
-.list{
-    list-style: none;
-    display: flex;
-    justify-content: space-around;
-    gap: 50px;
-    font-size: 20px;
+.list {
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  gap: 50px;
+  font-size: 20px;
 }
 
-.list a{
-    text-decoration: none;
-    font-weight: 800;
-    color: var(--blanco);
+.list a {
+  text-decoration: none;
+  font-weight: 800;
+  color: var(--blanco);
 }
 
-.list  a:hover {
-    color: var(--naranja);
+.list a:hover {
+  color: var(--naranja);
 }
 
 body {
-    background-color: var(--negro);
-    color: var(--blanco);
+  background-color: var(--negro);
+  color: var(--blanco);
 }
+
+.first-part {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background: linear-gradient(to top, rgb(0 0 0 / 0.6), rgb(0 0 0 / 0.6)),
+    url("fondo.jpg");
+  background-color: var(--negro);
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position-x: center;
+  background-repeat: no-repeat;
+  gap: 100px;
+}
+
+.first-part-text {
+  text-align: center;
+  width: 50%;
+  margin-top: 30px;
+}
+
+.first-part-text h1 {
+  font-size: 72px;
+  font-weight: 600;
+}
+
+.first-part-text h5 {
+  font-size: 30px;
+  margin-top: 25px;
+}
+
+.container-position {
+  margin: 50px 0;
+}
+
+.container-items {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  height: 100%;
+  justify-content: flex-start;
+  max-width: 300px;
+  background-color: var(--blanco);
+  color: var(--negro);
+}
+
+.card-order {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 30px;
+}
+
+.card-order span {
+  width: 90px;
+  height: 90px;
+  padding: 19px;
+  background-color: var(--naranja);
+  border-radius: 50%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 5px;
+}
+
+.card-order h4 {
+  font-weight: 700;
+  font-size: 1.3rem;
+  margin-top: 25px;
+  margin-bottom: 0;
+  text-align: center;
+}
+
+.card-order p {
+  color: var(--gris);
+  margin-top: 18px;
+  margin-bottom: 0;
+  text-align: center;
+  font-size: 1rem;
+  line-height: 24px;
+}
+
+.second-part {
+  margin-top: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.division-sedes {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.division-sedes h2 {
+  margin: 60px auto 0;
+  font-size: 60px;
+}
+
+.sedes-position {
+  margin-top: 64px;
+  width: 80%;
+}
+
+.sedes {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 24px;
+}
+
+.sede {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: var(--blanco);
+  box-shadow: 5px 5px 30px 0 rgba(0, 0, 0, 0.7);
+  width: 100%;
+}
+
+.sede-direction {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background: var(--naranja);
+  width: 100%;
+  height: 80px;
+  font-size: 25px;
+}
+
+.sede img {
+  width: 100%;
+  height: 65%;
+  object-fit: cover;
+}
+
+.sede ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  color: var(--negro);
+  margin-top: 30px;
+  list-style: none;
+  font-size: 20px;
+  line-height: 31px;
+}
+
+.third-part {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background: linear-gradient(to top, rgb(0 0 0 / 0.6), rgb(0 0 0 / 0.6)),
+    url("fondo\ de\ inspiracion.webp");
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position-x: left;
+  background-repeat: no-repeat;
+  gap: 100px;
+}
+
+.inspiration-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 75%;
+}
+
+.inspiration-text-tittle {
+    display: flex;
+    flex-direction: column; 
+}
+
+.inspiration-text-tittle h2 {
+    text-align: center;
+}
+
+.inspiration-text-tittle p{
+    padding: 0 100px;
+    text-align: center;
+}
+
+.inspiration-text h2 {
+  margin: 60px auto 0;
+  font-size: 71px;
+  font-weight: 700;
+}
+
+.inspiration-text p {
+  margin: 25px auto 0;
+  font-size: 30px;
+  text-align: center;
+}
+
+.divison-inspiration {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.inspiration {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
+  margin: 70px 0 140px;
+}
+
+.stories {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  background-color: var(--blanco);
+  padding: 20px;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  height: 650px;
+
+}
+
+.stories img {
+  display: flex;
+  width: 310px;
+  height: 320px;
+  object-fit: fill;
+  margin-top: 20px;
+}
+
+.stories h4 {
+  margin: 30px auto 0;
+  font-size: 30px;
+  font-weight: 700;
+  color: var(--negro);
+}
+
+.stories p {
+  color: var(--gris);
+  font-size: 20px;
+  margin-top: 25px;
+}
+
+.fourth-part {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.core {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    margin-top: 10px;
+    height: 600px;
+    width: 1166px;
+}
+
+.core-image-1-3 {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 291.5px;
+    justify-content:flex-start ;
+    align-items: center;
+}
+
+.core-image-2-4 {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: flex-end;
+    align-items: center;
+    height: 100%;
+    width: 291.5px;
+}
+
+.image {
+    display: flex;
+    flex-direction: column;
+    margin: 13px;
+}
+
+.image img{
+    width: 100%;
+    height: 90%;
+    object-fit: cover;
+}
+
+.block {
+    padding: 60px;
+    height: 20%;
+    width: 260.5px
+}
+
+.contact {
+    padding: 50px 12% 50px ;
+}
+
+.contact-container {
+    display: flex;
+    background: var(--blanco);
+    color: var(--negro);
+    height: auto;
+}
+
+.contact-image {
+    width: 50%;
+}
+
+.contact-image img{
+    display: flex;
+    object-fit: fill;
+    width: 100%;
+    height: 100%;
+}
+
+.contact-info {
+    width: 50%;
+    padding: 40px 0 40px 40px ;
+}
+
+.contact-tittle {
+    font-size: 25px;
+    
+}
+
+.contact-tittle p{
+    color: var(--gris);
+    font-size: 20px;
+    padding-top: 10px;
+}
+
+.contact-form,.contact-form-lastname,.contact-form-phone,.contact-form-email,.contact-form-text {
+    margin-top: 25px;
+}
+
+.contact-form-name label,.contact-form-lastname label,.contact-form-phone label, .contact-form-email label,.contact-form-text label {
+    display: block;
+    padding: 10px 0;
+}
+
+.contact-form-name input,.contact-form-lastname input,.contact-form-phone input,.contact-form-email input {
+    display: block;
+    padding: 10px 0;
+    width: 90%;
+    text-decoration: none;
+    border: none;
+    background-color: var(--fondo);
+}
+
+.contact-form-text textarea {
+    width: 90%;
+    border: none;
+    background-color: var(--fondo);
+    height: 80px;
+}
+
+.contact-form-send {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    width: 90%;
+    margin-top: 25px;
+}
+
+.contact-form-send input {
+    
+    background-color: var(--fondo);
+    text-transform: uppercase;
+    background-image: none;
+    font-weight: 700;
+    padding: 10px;
+    width: 30%;
+}
+
+.contact-form-send input:hover{
+    background-color: var(--naranja);
+}
+
+.footer {
+    display: flex;
+    justify-content: space-around;
+}
+
+.insta,.tiktok {
+    display: flex;
+    margin: 10px 40px 0;
+}
+
+.core {
+    display: flex;
+    justify-content: center;
+    height: 20%;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
