--- a/style/mediaquery.css
+++ b/style/mediaquery.css
@@ -5,8 +5,30 @@
     --gris: #808080;
     --fondo: #f2f2f2;
   }
-
+  @media screen and (max-width: 1200px) {
+    .container-position {
+      width: 940px;
+    }
+    .container-items{
+      width: 940px;
+      width: 100%;
+    }
+    
+  }
 @media screen and (max-width: 1024px) {
+  
+}
+
+@media screen and (max-width: 992px) {
+  .container-position {
+    width: 720px;
+  }
+
+  .container-items {
+    grid-template-columns: repeat(2, 1fr);
+    width: 100%;
+  }
+
   .navbar ul {
     background-color: var(--negro) ;
     width: 100%;
@@ -26,5 +48,21 @@
 
   #toggle-menu:checked ~ .list {
     display: flex;
+  }
+}
+
+@media screen and (max-width: 760px) {
+  .container-position {
+    width: 540px;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  .container-position {
+    width: 340px;
+  }
+  
+  .container-items {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
