--- a/style/mediaquery.css
+++ b/style/mediaquery.css
@@ -13,22 +13,26 @@
       width: 940px;
       width: 100%;
     }
+   
+    .sedes-position {
+      width: 940px;
+    }
     
+    .inspiration{
+      width: 940px;
+    }
+
+    .core {
+      width: 966px;
+      margin-top: 40px;
+    }
+
+    .core-image-1-3, .core-image-2-4 {
+      width: 241.5px;
+    }
   }
-@media screen and (max-width: 1024px) {
-  
-}
 
 @media screen and (max-width: 992px) {
-  .container-position {
-    width: 720px;
-  }
-
-  .container-items {
-    grid-template-columns: repeat(2, 1fr);
-    width: 100%;
-  }
-
   .navbar ul {
     background-color: var(--negro) ;
     width: 100%;
@@ -49,20 +53,168 @@
   #toggle-menu:checked ~ .list {
     display: flex;
   }
+
+  .container-position {
+    width: 720px;
+  }
+
+  .container-items {
+    grid-template-columns: repeat(2, 1fr);
+    width: 100%;
+  }
+
+  .sedes-position {
+    width: 720px;
+  }
+
+  .sedes{
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .inspiration{
+    width: 720px;
+    height: 1100px;
+  }
+
+  .inspiration {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .core {
+    width: 746px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    height: 100%;
+  }
+
+  .core-image-1-3, .core-image-2-4 {
+    width: 373px;
+  }
 }
 
 @media screen and (max-width: 760px) {
   .container-position {
     width: 540px;
   }
+
+  .first-part-text h1 {
+    width: 590px;
+  }
+
+  .sedes-position {
+    width: 540px;
+  }
+
+  .sedes{
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .inspiration{
+    width: 540px;
+  }
+  
+  .stories {
+    width: 260px;
+  }
+
+  .stories img {
+    height: 240px;
+    width: 239px;
+  }
+
+  .fourth-part {
+    margin-bottom: 20px;
+  }
+
+  .core {
+    width: 540px;
+    height: 100%;
+  }
+
+  .core-image-1-3, .core-image-2-4 {
+    width: 540px;
+    height: 750px;
+  }
+
+  .image {
+    height: 720px;
+  }
+
+  .image img{
+    width: 540px;
+    height: 714px;
+  }
+
+  .block {
+    height: 10px;
+    width: 100%;
+    padding: 0;
+  }
 }
 
 @media screen and (max-width: 575px) {
+  .first-part-text h1 {
+    font-size: 60px;
+    width: 80%;
+  }
+
   .container-position {
     width: 340px;
   }
-  
+
   .container-items {
     grid-template-columns: repeat(1, 1fr);
   }
+
+  .sedes-position {
+    width: 320px;
+  }
+
+  .division-sedes h2{
+    font-size: 40px;
+  }
+
+  .inspiration-text h2{
+    font-size: 55px;
+  }
+
+  .inspiration-text p{
+    font-size: 20px;
+    padding: 0 5%;
+  }
+
+  .inspiration{
+    grid-template-columns: repeat(1, 1fr);
+    width: 340px;
+    height: 100%;
+  }
+
+  .stories {
+    width: 340px;
+  }
+
+  .stories img {
+    height: 258px;
+    width: 300px;
+  }
+ 
+  .core {
+    width: 340px;
+    height: 100%;
+  }
+
+  .core-image-1-3, .core-image-2-4 {
+    width: 340px;
+    height: 470px;
+  }
+
+  .image {
+    height: 450px;
+  }
+
+  .image img{
+    width: 340px;
+    height: 450px;
+  }
+
 }
