--- a/style/style.css
+++ b/style/style.css
@@ -3,14 +3,18 @@
   --blanco: rgb(247, 247, 247);
   --naranja: rgb(255, 92, 51);
   --gris: #808080;
-  --grisclaro:#c0c0c0;
-  --fondo: #f2f2f2;
+  --grisclaro: #c0c0c0;
+  --fondo: #ebe1d8;
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+html {
+  overflow-x: hidden;
 }
 
 .nav-completo {
@@ -22,13 +26,12 @@
   width: 100%;
 }
 
-
 .navbar {
   display: flex;
-  margin: 40px;
+  margin: 10px;
 }
 
-.navbar label{
+.navbar label {
   display: none;
 }
 
@@ -57,6 +60,7 @@
 body {
   background-color: var(--negro);
   color: var(--blanco);
+  overflow-x: hidden;
 }
 
 .first-part {
@@ -121,7 +125,7 @@ body {
   width: 100%;
   height: 100%;
   justify-content: flex-start;
- 
+
   background-color: var(--blanco);
   color: var(--negro);
 }
@@ -260,18 +264,18 @@ body {
 }
 
 .inspiration-text-tittle {
-    display: flex;
-    flex-direction: column; 
+  display: flex;
+  flex-direction: column;
 }
 
 .inspiration-text-tittle h2 {
-    text-align: center;
+  text-align: center;
 }
 
-.inspiration-text-tittle p{
-    padding: 0 100px;
-    text-align: center;
-    color: var(--grisclaro);
+.inspiration-text-tittle p {
+  padding: 0 100px;
+  text-align: center;
+  color: var(--grisclaro);
 }
 
 .inspiration-text h2 {
@@ -301,7 +305,6 @@ body {
   justify-content: center;
   margin: 70px 0 140px;
   width: 1140px;
-  height: 520px;
 }
 
 .stories {
@@ -311,7 +314,7 @@ body {
   justify-content: flex-start;
   background-color: var(--blanco);
   padding: 20px;
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  box-shadow: 5px 5px 20px 0 rgba(0, 0, 0, 0.4);
   height: 100%;
 }
 
@@ -336,157 +339,277 @@ body {
 }
 
 .fourth-part {
-    display: flex;
+  display: flex;
 
-    justify-content: center;
-    align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .core {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    margin-top: 10px;
-    height: 600px;
-    width: 1166px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  margin-top: 10px;
+  height: 600px;
+  width: 1166px;
 }
 
 .core-image-1-3 {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    width: 291.5px;
-    justify-content:flex-start ;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 291.5px;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .core-image-2-4 {
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: flex-end;
-    align-items: center;
-    height: 100%;
-    width: 291.5px;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: flex-end;
+  align-items: center;
+  height: 100%;
+  width: 291.5px;
 }
 
 .image {
-    display: flex;
-    flex-direction: column;
-    margin: 13px;
+  display: flex;
+  flex-direction: column;
+  margin: 13px;
 }
 
-.image img{
-    width: 100%;
-    height: 90%;
-    object-fit: cover;
+.image img {
+  width: 100%;
+  height: 90%;
+  object-fit: cover;
 }
 
 .block {
-    padding: 60px;
-    height: 20%;
-    width: 260.5px
+  padding: 60px;
+  height: 20%;
+  width: 260.5px;
+}
+
+.fifth-part {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .contact {
-    padding: 50px 12% 50px ;
+  width: 1140px;
+  margin: 30px 0;
 }
 
 .contact-container {
-    display: flex;
-    background: var(--blanco);
-    color: var(--negro);
-    height: auto;
+  display: flex;
+  background: var(--blanco);
+  color: var(--negro);
+  height: auto;
 }
 
 .contact-image {
-    width: 50%;
+  width: 50%;
 }
 
-.contact-image img{
-    display: flex;
-    object-fit: fill;
-    width: 100%;
-    height: 100%;
+.contact-image img {
+  display: flex;
+  object-fit: fill;
+  width: 100%;
+  height: 100%;
 }
 
 .contact-info {
-    width: 50%;
-    padding: 40px 0 40px 40px ;
+  width: 50%;
+  padding: 40px 0 40px 40px;
 }
 
 .contact-tittle {
-    font-size: 25px;
-    
+  font-size: 25px;
 }
 
-.contact-tittle p{
-    color: var(--gris);
-    font-size: 20px;
-    padding-top: 10px;
+.contact-tittle p {
+  color: var(--gris);
+  font-size: 20px;
+  padding-top: 10px;
 }
 
-.contact-form,.contact-form-lastname,.contact-form-phone,.contact-form-email,.contact-form-text {
-    margin-top: 25px;
+.contact-form,
+.contact-form-lastname,
+.contact-form-phone,
+.contact-form-email,
+.contact-form-text {
+  margin-top: 25px;
 }
 
-.contact-form-name label,.contact-form-lastname label,.contact-form-phone label, .contact-form-email label,.contact-form-text label {
-    display: block;
-    padding: 10px 0;
+.contact-form-name label,
+.contact-form-lastname label,
+.contact-form-phone label,
+.contact-form-email label,
+.contact-form-text label {
+  display: block;
+  padding: 10px 0;
 }
 
-.contact-form-name input,.contact-form-lastname input,.contact-form-phone input,.contact-form-email input {
-    display: block;
-    padding: 10px 0;
-    width: 90%;
-    text-decoration: none;
-    border: none;
-    background-color: var(--fondo);
+.contact-form-name input,
+.contact-form-lastname input,
+.contact-form-phone input,
+.contact-form-email input {
+  display: block;
+  padding: 10px 0;
+  width: 90%;
+  text-decoration: none;
+  border: none;
+  background-color: var(--fondo);
 }
 
 .contact-form-text textarea {
-    width: 90%;
-    border: none;
-    background-color: var(--fondo);
-    height: 80px;
+  width: 90%;
+  border: none;
+  background-color: var(--fondo);
+  height: 80px;
 }
 
 .contact-form-send {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    width: 90%;
-    margin-top: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  width: 90%;
+  margin-top: 25px;
 }
 
 .contact-form-send input {
-    
-    background-color: var(--fondo);
-    text-transform: uppercase;
-    background-image: none;
-    font-weight: 700;
-    padding: 10px;
-    width: 30%;
+  background-color: var(--fondo);
+  text-transform: uppercase;
+  background-image: none;
+  font-weight: 700;
+  padding: 10px;
+  width: 30%;
 }
 
-.contact-form-send input:hover{
-    background-color: var(--naranja);
+.contact-form-send input:hover {
+  background-color: var(--naranja);
 }
 
 .footer {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
 
-.insta,.tiktok {
-    display: flex;
-    margin: 10px 40px 0;
+.insta,
+.tiktok {
+  display: flex;
+  margin: 10px 40px 0;
 }
 
 .core-footer {
-    display: flex;
-    justify-content: center;
-    height: 20%;
-    align-items: center;
-    margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  height: 20%;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.nav-completo-log-reg {
+  background-color: var(--negro);
+  display: flex;
+  justify-content: space-around;
+  padding: 0px 5%;
+  align-items: center;
+  width: 100%;
+}
+
+.login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 40px auto;
+  height: auto;
+  margin: 70px auto;
+}
+
+.login-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 500px;
+  border-radius: 20px;
+  box-shadow: 3px 4px 12px;
+  margin: 5vh 0;
+}
+
+.login-container img {
+  position: relative;
+  overflow: hidden;
+  filter: brightness(0.6);
+  border-radius: 20px;
+  width: 100%;
+  height: 100%;
+}
+
+.login-text {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  position: absolute;
+  width: 380px;
+  margin-top: 100px;
+}
+
+.login-dates {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.login-dates label {
+  font-size: 20px;
+  padding: 10px 0;
+}
+
+.login-dates input {
+  display: block;
+  padding: 10px 0;
+  text-decoration: none;
+  border: none;
+  background-color: var(--fondo);
+  height: 37px;
+  border-radius: 10px;
+  padding: 0 5%;
+}
+
+.login-buttom {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+}
+
+.login-buttom input{
+  height: 40px;
+  width: 120px;
+  background-color: var(--fondo);
+  font-size: 15px;
+  font-weight: 700;
+  border-radius: 15px;
+}
+
+.login-buttom input:hover {
+  background-color: var(--naranja);
+}
+
+.login-register {
+  display: flex;
+  gap: 15px;
+  justify-content: center;
+  align-items: center;
+  margin: 10px;
+  font-size: 16px;
+}
+
+.login-register a {
+  text-decoration: none;
+  font-weight: 800;
+  color: var(--naranja);
 }
 
